--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "light-touch",
+  "name": "light-scroll",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xiangle/light-touch.git"
+  },
+  "bugs": {
+    "url": "https://github.com/xiangle/light-touch/issues"
+  },
+  "homepage": "https://github.com/xiangle/light-touch#readme"
 }
