--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "rollup src/main.js -o dist/bundle.js -f iife -n touchBox -w"
   },
   "devDependencies": {
-   "rollup": "^0.54.1"
+    "rollup": "^0.54.1",
+    "rollup-plugin-buble": "^0.19.2"
   },
   "author": "",
   "license": "ISC",
